
 402.	[bug]		Treat undefined acls as errors, rather than
			warning and then later throwing an assertion.
			[RT #252]

 400.	[bug]		SIG(0) signing and verifying was done incorrectly.
			[RT #249]

 399.	[bug]		When reloading the server with a config file
			containing a syntax error, it could catch an
			assertion failure trying to perform zone
			maintenance on, or sending notifies from,
			tentatively created zones whose views were
			never fully configured and lacked an address
			database and request manager.

 398.	[bug]		"dig" sometimes caught an assertion failure when
			using TSIG, depending on the key length.

	--- 9.0.0rc3 released ---

 396.	[doc]		There is now a man page for "nsupdate" 
			in doc/man/bin/nsupdate.8.

 395.	[bug]		nslookup printed incorrect RR type mnemonics
			for RRs of type >= 21 [RT #237].

 389.	[bug]		Attempting to send a reqeust over IPv6 using
			dns_request_create() on a system without IPv6
			support caused an assertion failure [RT #235].

 386.	[bug]		Missing strdup() of ACL name caused random
			ACL matching failures [RT #228].

 384.	[bug]		nsupdate was incorrectly limiting TTLs to 65535 instead
			of 2147483647.

 383.	[func]		When writing a master file, print the SOA and NS
			records (and their SIGs) before other records.

 382.	[bug]		named -u failed on many Linux systems where the
			libc provided kernel headers do not match
			the current kernel.

 380.	[bug]		nsupdate didn't work with IPv6.

	--- 9.0.0rc2 released ---

 377.	[bug]		When additional data lookups were refused due to 
			"allow-query", the databases were still being
			attached causing reference leaks.

 376.	[bug]		The server should always use good entropy when
			performing cryptographic functions needing entropy.

 375.	[bug]		Per-zone allow-query did not properly override the
			view/global one for CNAME targets and additional
			data [RT #220].

 374.	[bug]		SOA in authoritative negative responses had wrong TTL.
